# email-triage

./: .env.example  .gitignore  Dockerfile  README.md  README_HF_SPACES.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
app/: __init__.py  email_data.py  environment.py  graders.py  main.py  models.py
server/: app.py
tests/: test_environment.py
