[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "Email Triage Environment: An OpenEnv reinforcement learning environment for email classification and response tasks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OpenEnv", email = "contact@openenv.com"}
]
keywords = ["reinforcement-learning", "environment", "email", "nlp", "openai"]
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.0",
    "pydantic==2.7.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.4.0",
    "requests>=2.31.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/kireet-09/email-triage"
Repository = "https://github.com/kireet-09/email-triage.git"
Documentation = "https://github.com/kireet-09/email-triage#readme"
Issues = "https://github.com/kireet-09/email-triage/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
ui = [
    "streamlit>=1.28.0",
]

[project.scripts]
server = "server.app:main"
email-triage-server = "app.main:app"

[tool.setuptools]
packages = ["app", "server", "tests"]

[tool.setuptools.package-data]
app = ["*.py"]
tests = ["*.py"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
